# car-crash-ai

./: .gitignore  AGENTS.md  LEARNING.md  PROJECT_PLAN.md  README.md  SETUP.md  TECHSTACK.md
.agents/: AGENTS.md
.agents/skills/building-swift/: SKILL.md
.beads/: metadata.json
CarCrashAI/App/: CarCrashAIApp.swift  Config.swift
CarCrashAI/Models/: AssessmentReport.swift  Components.swift  CostEstimate.swift  DamageItem.swift  Vehicle.swift
CarCrashAI/Prompts/: DamageAssessment.swift  VehicleIdentification.swift
CarCrashAI/Resources/: Config.plist.example
CarCrashAI/Services/: AIService.swift  CostEstimateService.swift  DamageDetectService.swift  ImageProcessor.swift  PriceSearchService.swift  VehicleIDService.swift
CarCrashAI/ViewModels/: AnalysisViewModel.swift
CarCrashAI/Views/: AnalysisView.swift  CameraView.swift  HomeView.swift  ReportView.swift
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: analysis.py  estimate.py  upload.py
backend/app/core/: config.py  llm.py
backend/app/data/: parts_prices.csv
backend/app/models/: __init__.py  damage.py  estimate.py  vehicle.py
backend/app/prompts/: damage_assessment.py  price_estimation.py  price_extraction.py  vehicle_identification.py
backend/app/services/: cost_estimate.py  damage_detect.py  image_proc.py  labor.py  price_search.py  static_prices.py  vehicle_id.py
backend/tests/: test_analysis.py  test_cost_estimate.py  test_damage_detect.py  test_upload.py  test_vehicle_id.py
frontend/: streamlit_app.py
(+10 files in other folders)
